Table Species {
  id big_auto [pk, unique]
  name char [unique]
  code char [unique]
  Note: '''Species(id, name, code)'''
}


Table Cluster {
  id big_auto [pk, unique]
  created_by foreign_key [null]
  created_at date_time 
  modified_at date_time 
  species foreign_key [null]
  st positive_integer 
  cluster_number positive_integer 
  Note: '''Cluster(id, created_by, created_at, modified_at, species, st, cluster_number)'''
}
ref: Cluster.created_by > User.id
ref: Cluster.species > Species.id


Table SequenceGroup {
  id big_auto [pk, unique]
  species foreign_key 
  created_by foreign_key [null]
  created_at date_time 
  modified_at date_time 
  sequences j_s_o_n 
  cluster foreign_key [null]
  Note: '''SequenceGroup(id, species, created_by, created_at, modified_at, sequences, cluster)'''
}
ref: SequenceGroup.species > Species.id
ref: SequenceGroup.created_by > User.id
ref: SequenceGroup.cluster > Cluster.id


Table BaseTool {
  id big_auto [pk, unique]
  type char 
  name char 
  version char 
  Note: '''BaseTool(id, type, name, version)'''
}


Table Comparison {
  id big_auto [pk, unique]
  created_by foreign_key [null]
  created_at date_time 
  data_fields None 
  field_data j_s_o_n 
  status char 
  started_at date_time [null]
  ended_at date_time [null]
  elapsed_time date_time [null]
  error_msg char [null]
  folder_path char [null]
  newick text [null]
  base_tool foreign_key [null]
  linkage_method char 
  params j_s_o_n 
  microreact_project char [null]
  sequence_group foreign_key 
  Note: '''Comparison(id, created_by, created_at, data_fields, field_data, status, started_at, ended_at, elapsed_time, error_msg, folder_path, newick, base_tool, linkage_method, params, microreact_project, sequence_group)'''
}
ref: Comparison.created_by > User.id
ref: Comparison.base_tool > BaseTool.id
ref: Comparison.sequence_group > SequenceGroup.id


Table PotentialOutbreak {
  id big_auto [pk, unique]
  created_by foreign_key [null]
  created_at date_time 
  modified_at date_time 
  cluster foreign_key 
  suspected_source char 
  Note: '''PotentialOutbreak(id, created_by, created_at, modified_at, cluster, suspected_source)'''
}
ref: PotentialOutbreak.created_by > User.id
ref: PotentialOutbreak.cluster > Cluster.id


Table comparisons_potentialoutbreak_comparison {
  comparison_id auto [pk]
  potentialoutbreak_id auto [pk]
}
ref: PotentialOutbreak.id > comparisons_potentialoutbreak_comparison.potentialoutbreak_id
ref: Comparison.id > comparisons_potentialoutbreak_comparison.comparison_id


